@@ -26,6 +26,7 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
         advance the packet data pointer
       OSPF: Print more truncation indications
       OSPF: Add more length checks
+      SLL2: Translate interface indices to names on Linux only.
       TCP: Add support for the AE (AccECN) flag.
     User interface:
       Add optional unit suffix on -C file size.
